Replace sqrt example with einsum contraction optimizer
Example project:
- New problem: find efficient contraction order for einsum expressions
- 5-level tiered evaluation with increasing tensor counts (3-15 tensors)
- 5 instances per level with seeded random generation for reproducibility
- Fast correctness verification using small tensors (dims=2)
- Baseline greedy solution achieves ~4/6 score

Dockerfile:
- Add python symlink (python3 -> python)
- Add procps package for pgrep command

--- a/example_project/pixi.toml
+++ b/example_project/pixi.toml
@@ -6,6 +6,7 @@ platforms = ["osx-arm64", "osx-64", "linux-64"]
 
 [dependencies]
 python = ">=3.12"
+numpy = ">=1.26"
 
 [pypi-dependencies]
 pytest = ">=8.0"
