--- a/src/aurelia/sandbox/Dockerfile
+++ b/src/aurelia/sandbox/Dockerfile
@@ -5,7 +5,9 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     python3-pip \
     python3-venv \
     git \
-    && rm -rf /var/lib/apt/lists/*
+    procps \
+    && rm -rf /var/lib/apt/lists/* \
+    && ln -s /usr/bin/python3 /usr/bin/python
 
 RUN npm install -g @google/gemini-cli
 
